tests/snapshots/files__eliminate_gamma_interval-rvsdg.snap
---
source: tests/files.rs
expression: visualization.result
---
<svg
	height="1450"
	version="1.1"
	width="2000"
	xmlns="http://www.w3.org/2000/svg">
	<g
		transform="translate(0, 0)">
		<rect
			fill="white"
			height="1450"
			rx="10"
			stroke="black"
			stroke-width="2"
			width="2000">
		</rect>
		<g>
			<path
				d="M 666.6667 0V 10Q 666.6667 20 656.6667 20H 393.33334Q 383.33334 20 383.33334 30V 200"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 1333.3334 0V 20Q 1333.3334 30 1323.3334 30H 747.5Q 737.5 30 737.5 40V 350"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 100 150V 165Q 100 175 110 175H 406.66666Q 416.66666 175 416.66666 185V 200"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 250 300V 320Q 250 330 260 330H 846.25Q 856.25 330 856.25 340V 350"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 400 300V 310Q 400 320 410 320H 608.75Q 618.75 320 618.75 330V 350"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 618.75 700V 707.5Q 618.75 717.5 628.75 717.5H 1681.6667Q 1691.6667 717.5 1691.6667 727.5V 900"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 737.5 700V 715Q 737.5 725 747.5 725H 1048.3334Q 1058.3334 725 1058.3334 735V 750"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 856.25 700V 722.5Q 856.25 732.5 866.25 732.5H 1081.6666Q 1091.6666 732.5 1091.6666 742.5V 750"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 1075 850V 865Q 1075 875 1085 875H 1423.3334Q 1433.3334 875 1433.3334 885V 900"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 1562.5 1400V 1415Q 1562.5 1425 1552.5 1425H 1010Q 1000 1425 1000 1435V 1450"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
		</g>
		<g>
			<g
				transform="translate(50, 50)">
				<g>
					<rect
						fill="#FFFF80"
						height="100"
						rx="10"
						stroke="black"
						stroke-width="2"
						width="100">
					</rect>
					<text
						fill="black"
						font-size="50"
						text-anchor="middle"
						x="50"
						y="62.5">
						10
					</text>
				</g>
				<circle
					cx="50"
					cy="100"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
			</g>
			<g
				transform="translate(200, 200)">
				<g>
					<rect
						fill="#FFFF80"
						height="100"
						rx="10"
						stroke="black"
						stroke-width="2"
						width="100">
					</rect>
					<text
						fill="black"
						font-size="50"
						text-anchor="middle"
						x="50"
						y="62.5">
						5
					</text>
				</g>
				<circle
					cx="50"
					cy="100"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
			</g>
			<g
				transform="translate(350, 200)">
				<g>
					<rect
						fill="#FFFF80"
						height="100"
						rx="10"
						stroke="black"
						stroke-width="2"
						width="100">
					</rect>
					<text
						fill="black"
						font-size="50"
						text-anchor="middle"
						x="50"
						y="62.5">
						lt
					</text>
				</g>
				<circle
					cx="33.333332"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="66.666664"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="50"
					cy="100"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
			</g>
			<g
				transform="translate(500, 350)">
				<rect
					fill="#80FF80"
					height="350"
					rx="10"
					stroke="black"
					stroke-width="2"
					width="475">
				</rect>
				<text
					fill="black"
					font-size="50"
					x="25"
					y="50">
					match
				</text>
				<g>
					<g
						transform="translate(25, 125)">
						<rect
							fill="white"
							height="200"
							rx="10"
							stroke="black"
							stroke-width="2"
							width="200">
						</rect>
						<g>
							<path
								d="M 66.666664 0V 157.5Q 66.666664 167.5 58.333332 167.5H 58.333332Q 50 167.5 50 177.5V 200"
								fill="transparent"
								stroke="black"
								stroke-linecap="round"
								stroke-width="2">
							</path>
							<path
								d="M 133.33333 0V 172.5Q 133.33333 182.5 141.66666 182.5H 141.66666Q 150 182.5 150 192.5V 200"
								fill="transparent"
								stroke="black"
								stroke-linecap="round"
								stroke-width="2">
							</path>
							<path
								d="M 100 150V 165Q 100 175 100 175H 100Q 100 175 100 185V 200"
								fill="transparent"
								stroke="black"
								stroke-linecap="round"
								stroke-width="2">
							</path>
						</g>
						<g>
							<g
								transform="translate(50, 50)">
								<g>
									<rect
										fill="#FFFF80"
										height="100"
										rx="10"
										stroke="black"
										stroke-width="2"
										width="100">
									</rect>
									<text
										fill="black"
										font-size="50"
										text-anchor="middle"
										x="50"
										y="62.5">
										3
									</text>
								</g>
								<circle
									cx="50"
									cy="100"
									fill="white"
									r="4"
									stroke="black"
									stroke-width="2">
								</circle>
							</g>
						</g>
						<g>
							<circle
								cx="66.666664"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
							<circle
								cx="133.33333"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
						</g>
						<g>
							<circle
								cx="50"
								cy="200"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
							<circle
								cx="100"
								cy="200"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
							<circle
								cx="150"
								cy="200"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
						</g>
					</g>
					<text
						fill="black"
						font-size="50"
						text-anchor="middle"
						x="125"
						y="100">
						0
					</text>
				</g>
				<g>
					<g
						transform="translate(250, 125)">
						<rect
							fill="white"
							height="200"
							rx="10"
							stroke="black"
							stroke-width="2"
							width="200">
						</rect>
						<g>
							<path
								d="M 66.666664 0V 157.5Q 66.666664 167.5 58.333332 167.5H 58.333332Q 50 167.5 50 177.5V 200"
								fill="transparent"
								stroke="black"
								stroke-linecap="round"
								stroke-width="2">
							</path>
							<path
								d="M 133.33333 0V 172.5Q 133.33333 182.5 141.66666 182.5H 141.66666Q 150 182.5 150 192.5V 200"
								fill="transparent"
								stroke="black"
								stroke-linecap="round"
								stroke-width="2">
							</path>
							<path
								d="M 100 150V 165Q 100 175 100 175H 100Q 100 175 100 185V 200"
								fill="transparent"
								stroke="black"
								stroke-linecap="round"
								stroke-width="2">
							</path>
						</g>
						<g>
							<g
								transform="translate(50, 50)">
								<g>
									<rect
										fill="#FFFF80"
										height="100"
										rx="10"
										stroke="black"
										stroke-width="2"
										width="100">
									</rect>
									<text
										fill="black"
										font-size="50"
										text-anchor="middle"
										x="50"
										y="62.5">
										2
									</text>
								</g>
								<circle
									cx="50"
									cy="100"
									fill="white"
									r="4"
									stroke="black"
									stroke-width="2">
								</circle>
							</g>
						</g>
						<g>
							<circle
								cx="66.666664"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
							<circle
								cx="133.33333"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
						</g>
						<g>
							<circle
								cx="50"
								cy="200"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
							<circle
								cx="100"
								cy="200"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
							<circle
								cx="150"
								cy="200"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
						</g>
					</g>
					<text
						fill="black"
						font-size="50"
						text-anchor="middle"
						x="350"
						y="100">
						1
					</text>
				</g>
				<circle
					cx="118.75"
					cy="0"
					fill="black"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="237.5"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="356.25"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="118.75"
					cy="350"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="237.5"
					cy="350"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="356.25"
					cy="350"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
			</g>
			<g
				transform="translate(1025, 750)">
				<g>
					<rect
						fill="#FFFF80"
						height="100"
						rx="10"
						stroke="black"
						stroke-width="2"
						width="100">
					</rect>
					<text
						fill="black"
						font-size="50"
						text-anchor="middle"
						x="50"
						y="62.5">
						lt
					</text>
				</g>
				<circle
					cx="33.333332"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="66.666664"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="50"
					cy="100"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
			</g>
			<g
				transform="translate(1175, 900)">
				<rect
					fill="#80FF80"
					height="500"
					rx="10"
					stroke="black"
					stroke-width="2"
					width="775">
				</rect>
				<text
					fill="black"
					font-size="50"
					x="25"
					y="50">
					match
				</text>
				<g>
					<g
						transform="translate(25, 125)">
						<rect
							fill="white"
							height="350"
							rx="10"
							stroke="black"
							stroke-width="2"
							width="350">
						</rect>
						<g>
							<path
								d="M 175 0V 15Q 175 25 185 25H 256.66666Q 266.66666 25 266.66666 35V 200"
								fill="transparent"
								stroke="black"
								stroke-linecap="round"
								stroke-width="2">
							</path>
							<path
								d="M 100 150V 165Q 100 175 110 175H 223.33333Q 233.33333 175 233.33333 185V 200"
								fill="transparent"
								stroke="black"
								stroke-linecap="round"
								stroke-width="2">
							</path>
							<path
								d="M 250 300V 315Q 250 325 240 325H 185Q 175 325 175 335V 350"
								fill="transparent"
								stroke="black"
								stroke-linecap="round"
								stroke-width="2">
							</path>
						</g>
						<g>
							<g
								transform="translate(50, 50)">
								<g>
									<rect
										fill="#FFFF80"
										height="100"
										rx="10"
										stroke="black"
										stroke-width="2"
										width="100">
									</rect>
									<text
										fill="black"
										font-size="50"
										text-anchor="middle"
										x="50"
										y="62.5">
										2
									</text>
								</g>
								<circle
									cx="50"
									cy="100"
									fill="white"
									r="4"
									stroke="black"
									stroke-width="2">
								</circle>
							</g>
							<g
								transform="translate(200, 200)">
								<g>
									<rect
										fill="#FFFF80"
										height="100"
										rx="10"
										stroke="black"
										stroke-width="2"
										width="100">
									</rect>
									<text
										fill="black"
										font-size="50"
										text-anchor="middle"
										x="50"
										y="62.5">
										PRINT
									</text>
								</g>
								<circle
									cx="33.333332"
									cy="0"
									fill="white"
									r="4"
									stroke="black"
									stroke-width="2">
								</circle>
								<circle
									cx="66.666664"
									cy="0"
									fill="white"
									r="4"
									stroke="black"
									stroke-width="2">
								</circle>
								<circle
									cx="50"
									cy="100"
									fill="white"
									r="4"
									stroke="black"
									stroke-width="2">
								</circle>
							</g>
						</g>
						<g>
							<circle
								cx="175"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
						</g>
						<g>
							<circle
								cx="175"
								cy="350"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
						</g>
					</g>
					<text
						fill="black"
						font-size="50"
						text-anchor="middle"
						x="200"
						y="100">
						0
					</text>
				</g>
				<g>
					<g
						transform="translate(400, 125)">
						<rect
							fill="white"
							height="350"
							rx="10"
							stroke="black"
							stroke-width="2"
							width="350">
						</rect>
						<g>
							<path
								d="M 175 0V 15Q 175 25 185 25H 256.66666Q 266.66666 25 266.66666 35V 200"
								fill="transparent"
								stroke="black"
								stroke-linecap="round"
								stroke-width="2">
							</path>
							<path
								d="M 100 150V 165Q 100 175 110 175H 223.33333Q 233.33333 175 233.33333 185V 200"
								fill="transparent"
								stroke="black"
								stroke-linecap="round"
								stroke-width="2">
							</path>
							<path
								d="M 250 300V 315Q 250 325 240 325H 185Q 175 325 175 335V 350"
								fill="transparent"
								stroke="black"
								stroke-linecap="round"
								stroke-width="2">
							</path>
						</g>
						<g>
							<g
								transform="translate(50, 50)">
								<g>
									<rect
										fill="#FFFF80"
										height="100"
										rx="10"
										stroke="black"
										stroke-width="2"
										width="100">
									</rect>
									<text
										fill="black"
										font-size="50"
										text-anchor="middle"
										x="50"
										y="62.5">
										1
									</text>
								</g>
								<circle
									cx="50"
									cy="100"
									fill="white"
									r="4"
									stroke="black"
									stroke-width="2">
								</circle>
							</g>
							<g
								transform="translate(200, 200)">
								<g>
									<rect
										fill="#FFFF80"
										height="100"
										rx="10"
										stroke="black"
										stroke-width="2"
										width="100">
									</rect>
									<text
										fill="black"
										font-size="50"
										text-anchor="middle"
										x="50"
										y="62.5">
										PRINT
									</text>
								</g>
								<circle
									cx="33.333332"
									cy="0"
									fill="white"
									r="4"
									stroke="black"
									stroke-width="2">
								</circle>
								<circle
									cx="66.666664"
									cy="0"
									fill="white"
									r="4"
									stroke="black"
									stroke-width="2">
								</circle>
								<circle
									cx="50"
									cy="100"
									fill="white"
									r="4"
									stroke="black"
									stroke-width="2">
								</circle>
							</g>
						</g>
						<g>
							<circle
								cx="175"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
						</g>
						<g>
							<circle
								cx="175"
								cy="350"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
						</g>
					</g>
					<text
						fill="black"
						font-size="50"
						text-anchor="middle"
						x="575"
						y="100">
						1
					</text>
				</g>
				<circle
					cx="258.33334"
					cy="0"
					fill="black"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="516.6667"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="387.5"
					cy="500"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
			</g>
		</g>
		<g>
			<circle
				cx="666.6667"
				cy="0"
				fill="white"
				r="4"
				stroke="black"
				stroke-width="2">
			</circle>
			<circle
				cx="1333.3334"
				cy="0"
				fill="white"
				r="4"
				stroke="black"
				stroke-width="2">
			</circle>
		</g>
		<g>
			<circle
				cx="1000"
				cy="1450"
				fill="white"
				r="4"
				stroke="black"
				stroke-width="2">
			</circle>
		</g>
	</g>
</svg>

