tests/snapshots/files__eliminate_loop-optimize-no-ctx.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 
@main {
  c0_: int = const 1;
  c1_: bool = const false;
  print c0_;
  ret;
}
