tests/snapshots/files__eliminate_loop-optimize-sequential.snap
---
source: tests/files.rs
expression: visualization.result
---
@main {
.b0_:
  c1_: int = const 1;
  c2_: bool = const false;
  print c1_;
}
