tests/snapshots/files__eliminate_loop-peg.snap
---
source: tests/files.rs
expression: visualization.result
---
digraph G {
subgraph {
node [ordering=out];
v0 [label="int"];
v1 [label="Θ_3"];
v2 [label="pass_3"];
v3 [label="no-op"];
v4 [label="arg 0"];
v5 [label="int"];
v6 [label="lt"];
v7 [label="eval_3"];
v8 [label="PRINT"];
v1 -> v4;
v1 -> v1;
v2 -> v6;
v3 -> v7;
v6 -> v5;
v6 -> v0;
v7 -> v1;
v7 -> v2;
v8 -> v0;
v8 -> v3;
}
}

