tests/snapshots/files__eliminate_loop-rvsdg.snap
---
source: tests/files.rs
expression: visualization.result
---
<svg
	height="700"
	version="1.1"
	width="950"
	xmlns="http://www.w3.org/2000/svg">
	<g
		transform="translate(0, 0)">
		<rect
			fill="white"
			height="700"
			rx="10"
			stroke="black"
			stroke-width="2"
			width="950">
		</rect>
		<g>
			<path
				d="M 475 0V 15Q 475 25 475 25H 475Q 475 25 475 35V 50"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 100 150V 170Q 100 180 110 180H 823.3333Q 833.3333 180 833.3333 190V 550"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 558.3334 500V 510Q 558.3334 520 568.3334 520H 856.6667Q 866.6667 520 866.6667 530V 550"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 850 650V 665Q 850 675 840 675H 485Q 475 675 475 685V 700"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
		</g>
		<g>
			<g
				transform="translate(50, 50)">
				<g>
					<rect
						fill="#FFFF80"
						height="100"
						rx="10"
						stroke="black"
						stroke-width="2"
						width="100">
					</rect>
					<text
						fill="black"
						font-size="50"
						text-anchor="middle"
						x="50"
						y="62.5">
						1
					</text>
				</g>
				<circle
					cx="50"
					cy="100"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
			</g>
			<g
				transform="translate(200, 50)">
				<rect
					fill="#FF8080"
					height="450"
					rx="10"
					stroke="black"
					stroke-width="2"
					width="550">
				</rect>
				<text
					fill="black"
					font-size="50"
					x="25"
					y="50">
					loop
				</text>
				<g
					transform="translate(25, 75)">
					<rect
						fill="white"
						height="350"
						rx="10"
						stroke="black"
						stroke-width="2"
						width="500">
					</rect>
					<g>
						<path
							d="M 250 0V 320Q 250 330 260 330H 323.33334Q 333.33334 330 333.33334 340V 350"
							fill="transparent"
							stroke="black"
							stroke-linecap="round"
							stroke-width="2">
						</path>
						<path
							d="M 100 150V 170Q 100 180 110 180H 406.66666Q 416.66666 180 416.66666 190V 200"
							fill="transparent"
							stroke="black"
							stroke-linecap="round"
							stroke-width="2">
						</path>
						<path
							d="M 250 150V 160Q 250 170 260 170H 373.33334Q 383.33334 170 383.33334 180V 200"
							fill="transparent"
							stroke="black"
							stroke-linecap="round"
							stroke-width="2">
						</path>
						<path
							d="M 400 300V 310Q 400 320 390 320H 176.66667Q 166.66667 320 166.66667 330V 350"
							fill="transparent"
							stroke="black"
							stroke-linecap="round"
							stroke-width="2">
						</path>
					</g>
					<g>
						<g
							transform="translate(50, 50)">
							<g>
								<rect
									fill="#FFFF80"
									height="100"
									rx="10"
									stroke="black"
									stroke-width="2"
									width="100">
								</rect>
								<text
									fill="black"
									font-size="50"
									text-anchor="middle"
									x="50"
									y="62.5">
									1
								</text>
							</g>
							<circle
								cx="50"
								cy="100"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
						</g>
						<g
							transform="translate(200, 50)">
							<g>
								<rect
									fill="#FFFF80"
									height="100"
									rx="10"
									stroke="black"
									stroke-width="2"
									width="100">
								</rect>
								<text
									fill="black"
									font-size="50"
									text-anchor="middle"
									x="50"
									y="62.5">
									3
								</text>
							</g>
							<circle
								cx="50"
								cy="100"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
						</g>
						<g
							transform="translate(350, 200)">
							<g>
								<rect
									fill="#FFFF80"
									height="100"
									rx="10"
									stroke="black"
									stroke-width="2"
									width="100">
								</rect>
								<text
									fill="black"
									font-size="50"
									text-anchor="middle"
									x="50"
									y="62.5">
									lt
								</text>
							</g>
							<circle
								cx="33.333332"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
							<circle
								cx="66.666664"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
							<circle
								cx="50"
								cy="100"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
						</g>
					</g>
					<g>
						<circle
							cx="250"
							cy="0"
							fill="white"
							r="4"
							stroke="black"
							stroke-width="2">
						</circle>
					</g>
					<g>
						<circle
							cx="166.66667"
							cy="350"
							fill="black"
							r="4"
							stroke="black"
							stroke-width="2">
						</circle>
						<circle
							cx="333.33334"
							cy="350"
							fill="white"
							r="4"
							stroke="black"
							stroke-width="2">
						</circle>
					</g>
				</g>
				<circle
					cx="275"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="358.33334"
					cy="450"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
			</g>
			<g
				transform="translate(800, 550)">
				<g>
					<rect
						fill="#FFFF80"
						height="100"
						rx="10"
						stroke="black"
						stroke-width="2"
						width="100">
					</rect>
					<text
						fill="black"
						font-size="50"
						text-anchor="middle"
						x="50"
						y="62.5">
						PRINT
					</text>
				</g>
				<circle
					cx="33.333332"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="66.666664"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="50"
					cy="100"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
			</g>
		</g>
		<g>
			<circle
				cx="475"
				cy="0"
				fill="white"
				r="4"
				stroke="black"
				stroke-width="2">
			</circle>
		</g>
		<g>
			<circle
				cx="475"
				cy="700"
				fill="white"
				r="4"
				stroke="black"
				stroke-width="2">
			</circle>
		</g>
	</g>
</svg>

