tests/snapshots/files__eliminate_loop-structured.snap
---
source: tests/files.rs
expression: visualization.result
---
main {
block:

while true:
 block:
  one: int = const 1;
  three: int = const 3;
  cond: bool = lt three one;
  if cond:
   break 2
  else:
   break 1
 block:
  print one;
  return

}
