tests/snapshots/files__fib-2-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 100000
@main(v0: int) {
  c1_: int = const 2;
  v2_: bool = lt c1_ v0;
  v3_: ptr<int> = alloc v0;
  c4_: int = const 1;
  v5_: ptr<int> = ptradd v3_ c4_;
  c6_: int = const 0;
  store v3_ c6_;
  store v5_ c4_;
  v7_: ptr<int> = id v3_;
  v8_: int = id c1_;
  v9_: int = id c4_;
  v10_: int = id v0;
  br v2_ .b11_ .b12_;
.b11_:
  v13_: ptr<int> = id v3_;
  v14_: int = id c1_;
  v15_: int = id c4_;
  v16_: int = id v0;
.b17_:
  v18_: ptr<int> = ptradd v13_ v14_;
  c19_: int = const -1;
  v20_: ptr<int> = ptradd v18_ c19_;
  v21_: int = load v20_;
  c22_: int = const -2;
  v23_: ptr<int> = ptradd v18_ c22_;
  v24_: int = load v23_;
  v25_: int = add v21_ v24_;
  store v18_ v25_;
  v26_: int = add v14_ v15_;
  v27_: bool = lt v26_ v16_;
  v28_: ptr<int> = id v13_;
  v14_: int = id v26_;
  v29_: int = id v15_;
  v30_: int = id v16_;
  v13_: ptr<int> = id v28_;
  v15_: int = id v29_;
  v16_: int = id v30_;
  br v27_ .b17_ .b31_;
.b31_:
  v7_: ptr<int> = id v13_;
  v8_: int = id v14_;
  v9_: int = id v15_;
  v10_: int = id v16_;
  v32_: ptr<int> = ptradd v7_ v8_;
  c33_: int = const -1;
  v34_: ptr<int> = ptradd v32_ c33_;
  v35_: int = load v34_;
  free v7_;
  print v35_;
  ret;
  jmp .b36_;
.b12_:
  v32_: ptr<int> = ptradd v7_ v8_;
  c33_: int = const -1;
  v34_: ptr<int> = ptradd v32_ c33_;
  v35_: int = load v34_;
  free v7_;
  print v35_;
  ret;
.b36_:
}
