tests/snapshots/files__fib-2-unroll-optimize-no-ctx.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 100000
@main(v0: int) {
  v1_: ptr<int> = alloc v0;
  c2_: int = const 1;
  v3_: ptr<int> = ptradd v1_ c2_;
  c4_: int = const 0;
  store v1_ c4_;
  store v3_ c2_;
  c5_: int = const 2;
  v6_: ptr<int> = id v1_;
  v7_: int = id c5_;
  v8_: int = id c2_;
  v9_: int = id v0;
.b10_:
  v11_: bool = lt v7_ v9_;
  c12_: bool = const false;
  v13_: ptr<int> = id v6_;
  v14_: int = id v7_;
  v15_: bool = id c12_;
  v16_: int = id v8_;
  v17_: int = id v9_;
  br v11_ .b18_ .b19_;
.b18_:
  v20_: int = add v7_ v8_;
  v21_: bool = lt v20_ v9_;
  v22_: ptr<int> = ptradd v6_ v7_;
  c23_: int = const -1;
  v24_: ptr<int> = ptradd v22_ c23_;
  v25_: int = load v24_;
  c26_: int = const -2;
  v27_: ptr<int> = ptradd v22_ c26_;
  v28_: int = load v27_;
  v29_: int = add v25_ v28_;
  store v22_ v29_;
  c30_: bool = const false;
  v31_: ptr<int> = id v6_;
  v32_: int = id v20_;
  v33_: bool = id c30_;
  v34_: int = id v8_;
  v35_: int = id v9_;
  br v21_ .b36_ .b37_;
.b36_:
  v38_: ptr<int> = ptradd v6_ v20_;
  c39_: int = const -1;
  v40_: ptr<int> = ptradd v38_ c39_;
  v41_: int = load v40_;
  c42_: int = const -2;
  v43_: ptr<int> = ptradd v38_ c42_;
  v44_: int = load v43_;
  v45_: int = add v41_ v44_;
  store v38_ v45_;
  v46_: int = add v20_ v8_;
  c47_: bool = const true;
  v31_: ptr<int> = id v6_;
  v32_: int = id v46_;
  v33_: bool = id c47_;
  v34_: int = id v8_;
  v35_: int = id v9_;
  v13_: ptr<int> = id v31_;
  v14_: int = id v32_;
  v15_: bool = id v33_;
  v16_: int = id v34_;
  v17_: int = id v35_;
  v6_: ptr<int> = id v6_;
  v7_: int = id v14_;
  v8_: int = id v8_;
  v9_: int = id v9_;
  jmp .b10_;
.b37_:
  v13_: ptr<int> = id v31_;
  v14_: int = id v32_;
  v15_: bool = id v33_;
  v16_: int = id v34_;
  v17_: int = id v35_;
  v6_: ptr<int> = id v6_;
  v7_: int = id v14_;
  v8_: int = id v8_;
  v9_: int = id v9_;
  v48_: ptr<int> = ptradd v6_ v7_;
  c49_: int = const -1;
  v50_: ptr<int> = ptradd v48_ c49_;
  v51_: int = load v50_;
  free v6_;
  print v51_;
  ret;
  jmp .b52_;
.b19_:
  v6_: ptr<int> = id v6_;
  v7_: int = id v14_;
  v8_: int = id v8_;
  v9_: int = id v9_;
  v48_: ptr<int> = ptradd v6_ v7_;
  c49_: int = const -1;
  v50_: ptr<int> = ptradd v48_ c49_;
  v51_: int = load v50_;
  free v6_;
  print v51_;
  ret;
.b52_:
}
